# microservices-applications

./: Dockerfile  README.md  alembic.ini  pyproject.toml
app/: main.py
app/api/: dto.py  endpoin.py
app/core/: enum.py  logger.py  settings.py
app/database/: models.py  session.py
app/utils/: enum.py
scripts/: env.py
scripts/versions/: 2025_10_05_0757-3b805d011f74_initial.py  2025_10_06_1950-b00ea97f03a4_init.py  2025_10_08_1410-27ecaed4ba9e_updete.py
